# vulkanri

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  README.md  compile_shaders.bat
examples/buffer_usage/: main.cpp
examples/buffer_usage/shaders/: shader.frag  shader.vert
examples/cmake/: FindGLFW.cmake
examples/common/: Camera.h
examples/hello_world/: main.cpp
examples/hello_world/shaders/: shader.vert
examples/pbr_ibl/: main.cpp
examples/pbr_ibl/shaders/: cubeSample.glsl  importanceSampleGGX.glsl  integrateGGX.comp  irradiance.comp  prefilterGGX.comp  shader.frag  shader.vert  skybox.frag  skybox.vert
examples/resources/shaders/: gamma.glsl  math.glsl  normals.glsl  pbr.glsl
examples/textures_usage/: main.cpp
examples/textures_usage/shaders/: displacement.tesc  displacement.tese  shader.frag  shader.vert
examples/vertex_buffers/: main.cpp
examples/vertex_buffers/shaders/: shader.vert
include/ri/: ApplicationInstance.h  Buffer.h  CommandBuffer.h  CommandPool.h  ComputePipeline.h  Config.h  DescriptorPool.h  DescriptorSet.h  DeviceContext.h  InputLayout.h  RenderObject.h  RenderPass.h  RenderPipeline.h  RenderTarget.h  ShaderModule.h  ShaderPipeline.h  Size.h  Surface.h  Texture.h  Types.h  ValidationReport.h  VertexDescription.h  ri_internal.h
include/ri/internal/: RenderObject.h  ri_internal.h  ri_internal_get_handle.h
include/util/: iterator.h  math.h  memory.h  noncopyable.h  safe_enum.h  safe_enum_internal.h
src/ri/: ApplicationInstance.cpp  Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  ComputePipeline.cpp  DescriptorPool.cpp  DeviceContext.cpp  InputLayout.cpp  RenderPass.cpp  RenderPipeline.cpp  RenderTarget.cpp  ShaderModule.cpp  Surface.cpp  Texture.cpp  ValidationReport.cpp  VertexDescription.cpp  ri_internal_get_handle.h
util/: common.h  safe_enum.h
